# cppx

./: .gitignore  CMakeLists.txt  README.md  cppx.toml
.github/workflows/: build-deb.yml
include/cppx/: builder.hpp  generator.hpp  toolchain.hpp
src/: builder.cpp  cli.cpp  main.cpp  toolchain.cpp
